MDEV-30705: JSON_SCHEMA_VALID: schema with multipleOf for big value always return 1

Analysis: Implementation used double to store value. longlong is better
choice
Fix: Use longlong for multiple_of and the value to store it and num_flag to
check for decimals.